// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterBarPopup renders the UI snapshots correctly 1`] = `
<div
  className="css-1xdhyk6"
  id="ds-filterBarPopup-defaultFilterBarNoButtons"
>
  <button
    className="chakra-button css-1llumfr"
    id="ds-button-ds-filterBarPopup-defaultFilterBarNoButtons-show-filters"
    onClick={[Function]}
    type="button"
  >
    Show filters
  </button>
</div>
`;

exports[`FilterBarPopup renders the UI snapshots correctly 2`] = `
<div
  className="css-1xdhyk6"
  id="ds-filterBarPopup-filterBarWithClearAllButton"
>
  <button
    className="chakra-button css-1llumfr"
    id="ds-button-ds-filterBarPopup-filterBarWithClearAllButton-show-filters"
    onClick={[Function]}
    type="button"
  >
    Show filters
  </button>
</div>
`;

exports[`FilterBarPopup renders the UI snapshots correctly 3`] = `
<div
  className="css-1xdhyk6"
  id="ds-filterBarPopup-filterBarWithSubmitAllButton"
>
  <button
    className="chakra-button css-1llumfr"
    id="ds-button-ds-filterBarPopup-filterBarWithSubmitAllButton-show-filters"
    onClick={[Function]}
    type="button"
  >
    Show filters
  </button>
</div>
`;

exports[`FilterBarPopup renders the UI snapshots correctly 4`] = `
<div
  className="css-1xdhyk6"
  id="ds-filterBarPopup-filterBarWithButtons"
>
  <button
    className="chakra-button css-1llumfr"
    id="ds-button-ds-filterBarPopup-filterBarWithButtons-show-filters"
    onClick={[Function]}
    type="button"
  >
    Show filters
  </button>
</div>
`;
